feat: Introduce new internationalized feature descriptions and developer credit, enhance the CTA discount badge, and improve waitlist form validation and error handling.

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -94,6 +94,14 @@
         "title": "إشعارات ذكية",
         "description": "وضع خفي ووضع إلحاح."
       },
+      "symptoms": {
+        "title": "تتبع الأعراض",
+        "description": "سجل مفصل مع درجة الشدة ومراحل التعافي."
+      },
+      "treatments": {
+        "title": "إدارة العلاجات",
+        "description": "تنظيم الحالات الطبية والأدوية المرتبطة بها."
+      },
       "widgets": {
         "title": "التطبيقات المصغرة والأنشطة الحية",
         "description": "لوحة معلومات على الشاشة الرئيسية."
@@ -248,6 +256,7 @@
     "terms": "الشروط والأحكام",
     "disclaimer": "إخلاء المسؤولية",
     "copyright": "٢٠٢٦ VitalsPath · صُنع بـ",
+    "developer": "بواسطة RomeroDev",
     "subscription": "الاشتراك"
   },
   "legal": {
