--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -248,6 +248,7 @@
     "terms": "नियम और शर्तें",
     "disclaimer": "अस्वीकरण",
     "copyright": "2026 VitalsPath · बनाया गया",
+    "developer": "RomeroDev द्वारा",
     "subscription": "सदस्यता"
   },
   "legal": {
@@ -351,80 +352,79 @@
           "title": "4. आपका डेटा कैसे संग्रहीत किया जाता है",
           "content": "<strong>4.1. स्थानीय संग्रहण:</strong><br>• मुख्य: सभी डेटा SwiftData (एन्क्रिप्टेड डेटाबेस) के माध्यम से डिवाइस पर स्थानीय रूप से संग्रहीत किया जाता है।<br>• एन्क्रिप्शन: संवेदनशील डेटा iOS सुरक्षा API का उपयोग करके एन्क्रिप्टेड है।<br>• बैकअप: मुफ्त (निर्यात योग्य JSON एन्क्रिप्टेड बैकअप) / प्रीमियम (Apple द्वारा अंत-से-अंत एन्क्रिप्टेड iCloud बैकअप)।<br><br><strong>4.2. कोई दूरस्थ सर्वर नहीं:</strong><br>VitalsPath आपके डेटा को बाहरी सर्वर पर नहीं भेजता है। सभी प्रसंस्करण आपके डिवाइस पर स्थानीय रूप से किया जाता है।<br><br><strong>4.3. तृतीय-पक्ष सेवाएं (जब आप अधिकृत करते हैं):</strong><br>• Apple HealthKit: स्वास्थ्य डेटा पढ़ना - आपके द्वारा अधिकृत डेटा - आधार: सहमति।<br>• iCloud (प्रीमियम): एन्क्रिप्टेड बैकअप - सभी डेटा (एन्क्रिप्टेड) - आधार: सहमति।<br>• शेयर शीट (निर्यात): PDF/CSV साझा करना - केवल निर्यात किया गया डेटा - आधार: सहमति।"
         },
-        "recipients": {
-          },
-         "contact": {
-           "title": "संपर्क",
-           "content": "इस अस्वीकरण के बारे में प्रश्नों के लिए, support@vitalspath.app पर हमसे संपर्क करें।"
-         }
-       }
-     },
-     "subscription": {
-       "title": "VitalsPath सदस्यता शर्तें",
-       "lastUpdated": "अंतिम अपडेट: 18 फरवरी 2026",
-       "intro": "VitalsPath मुफ्त और प्रीमियम सुविधाओं के साथ एक फ्रीमियम मॉडल प्रदान करता है। यह पेज समझाता है कि सदस्यता, भुगतान और रद्दीकरण कैसे काम करते हैं।",
-       "sections": {
-         "whatIs": {
-           "title": "1. VitalsPath Premium क्या है?",
-           "content": "VitalsPath Premium एक भुगतान योजना है जो पारिवारिक स्वास्थ्य प्रबंधन के लिए उन्नत सुविधाएं अनलॉक करती है।<br><br><strong>शामिल सुविधाएं:</strong><br>• असीमित पारिवारिक प्रोफाइल<br>• पसंदीदा क्लिनिक और फार्मेसी<br>• उन्नत दवा शेड्यूलिंग<br>• दवा इन्वेंट्री ट्रैकिंग<br>• पूर्ण डेटा निर्यात (PDF/CSV)<br>• उन्नत विश्लेषण और आंकड़े<br>• iCloud बैकअप (एंड-टू-एंड एन्क्रिप्शन)<br>• प्राथमिकता ईमेल समर्थन<br><br><strong>मुफ्त संस्करण:</strong><br>मुफ्त संस्करण में 2 तक प्रोफाइल, बुनियादी दवाएं, स्थानीय रिमाइंडर और सीमित निर्यात शामिल हैं।"
-         },
-         "plans": {
-           "title": "2. उपलब्ध सदस्यता योजनाएं",
-           "content": "<strong>मासिक:</strong> माह-दर-माह भुगतान, कभी भी रद्द कर सकते हैं।<br><br><strong>वार्षिक:</strong> मासिक योजना की तुलना में छूट के साथ वार्षिक भुगतान। हर 12 महीने में स्वचालित नवीनीकरण।<br><br><strong>लाइफटाइम:</strong> एकमुश्त भुगतान। वर्तमान और भविष्य की सभी प्रीमियम सुविधाओं तक स्थायी पहुंच, कोई आवर्ती भुगतान नहीं।<br><br>कीमतें देश के अनुसार भिन्न हो सकती हैं और स्थानीय कर शामिल हो सकते हैं। पुष्टि से पहले कीमतें खरीद स्क्रीन पर दिखाई देती हैं।"
-         },
-         "howItWorks": {
-           "title": "3. खरीद कैसे काम करती है",
-           "content": "<strong>Apple के माध्यम से प्रबंधन:</strong><br>सभी खरीद और सदस्यताएं आपके Apple खाते (App Store) के माध्यम से प्रबंधित होती हैं।<br><br><strong>स्वचालित नवीनीकरण:</strong><br>मासिक और वार्षिक सदस्यताएं अवधि के अंत में स्वचालित रूप से नवीनीकृत होती हैं, जब तक आप पहले रद्द न करें।<br><br><strong>पुष्टि:</strong><br>खरीद की पुष्टि करने पर, भुगतान आपके iTunes/Apple ID खाते से काटा जाएगा।<br><br><strong>मुफ्त परीक्षण:</strong><br>यदि हम मुफ्त परीक्षण अवधि प्रदान करते हैं, तो यह स्वचालित रूप से भुगतान सदस्यता में बदल जाएगी जब तक आप समाप्ति से पहले रद्द न करें।"
-         },
-         "management": {
-           "title": "4. अपनी सदस्यता का प्रबंधन",
-           "content": "आप अपने iOS डिवाइस से सदस्यता प्रबंधित कर सकते हैं:<br><br>1. <strong>Settings</strong> ऐप खोलें<br>2. ऊपर अपने <strong>नाम/Apple ID</strong> पर टैप करें<br>3. <strong>Subscriptions</strong> चुनें<br>4. <strong>VitalsPath</strong> खोजें और चुनें<br>5. यहां से आप योजना बदल सकते हैं या रद्द कर सकते हैं<br><br>आप अपनी प्रोफाइल फोटो टैप करके App Store से भी सदस्यताएं प्रबंधित कर सकते हैं → Subscriptions।"
-         },
-         "cancellation": {
-           "title": "5. रद्द करने पर क्या होता है?",
-           "content": "<strong>अवधि के अंत तक पहुंच:</strong><br>यदि आप मासिक या वार्षिक सदस्यता रद्द करते हैं, तो वर्तमान बिलिंग अवधि के समाप्त होने तक आप प्रीमियम सुविधाओं तक पहुंच जारी रखेंगे।<br><br><strong>कोई आंशिक रिफंड नहीं:</strong><br>सक्रिय सदस्यताओं की अनुपयुक्त अवधियों के लिए रिफंड की पेशकश नहीं की जाती।<br><br><strong>डेटा संरक्षित:</strong><br>आपका डेटा संरक्षित रहता है। यदि आप पुनः सदस्यता लेते हैं, तो आप सभी सेटिंग्स और इतिहास तक पहुंच पुनः प्राप्त करेंगे।<br><br><strong>लाइफटाइम योजना:</strong><br>लाइफटाइम योजना में कोई आवर्ती सदस्यता नहीं है, इसलिए रद्द करने के लिए कुछ भी नहीं है। आपको स्थायी पहुंच मिलेगी।"
-         },
-         "issues": {
-           "title": "6. तकनीकी समस्याएं और समर्थन",
-           "content": "<strong>खरीदें पुनर्स्थापित करें:</strong><br>यदि आपने Premium खरीदा है लेकिन यह सक्रिय नहीं हुआ, तो Settings → Premium → Restore Purchases पर जाएं।<br><br><strong>डिवाइस बदलना:</strong><br>आपकी खरीद आपके Apple ID से जुड़ी है। अपने नए डिवाइस पर VitalsPath इंस्टॉल करें और खरीदें पुनर्स्थापित करें।<br><br><strong>समर्थन से संपर्क करें:</strong><br>भुगतान या सदस्यता समस्याओं के लिए, ईमेल करें: vitalspath@gmail.com<br><br><strong>रिफंड:</strong><br>Apple सभी रिफंड संभालता है। आप reportaproblem.apple.com से अनुरोध कर सकते हैं"
-         },
-         "changes": {
-           "title": "7. Premium में बदलाव",
-           "content": "<strong>नई सुविधाएं:</strong><br>हम मौजूदा ग्राहकों के लिए बिना किसी अतिरिक्त लागत के नई प्रीमियम सुविधाएं जोड़ सकते हैं।<br><br><strong>कीमत बदलाव:</strong><br>यदि हम सक्रिय सदस्यता की कीमत बढ़ाते हैं, तो हम पहले से सूचित करेंगे। आप नई कीमत स्वीकार कर सकते हैं या रद्द कर सकते हैं।<br><br><strong>सुविधा हटाना:</strong><br>हम शायद ही कभी सुविधाएं हटाते हैं। यदि हम करते हैं, तो हम समकक्ष विकल्प खोजेंगे।<br><br><strong>लाइफटाइम योजना:</strong><br>लाइफटाइम एक्सेस में बिना किसी अतिरिक्त लागत के सभी भविष्य के अपडेट शामिल हैं।"
-         },
-         "law": {
-           "title": "8. लागू कानून",
-           "content": "ये शर्तें स्पेनिश कानून द्वारा शासित हैं।<br><br>किसी भी विवाद के लिए, पक्ष वालेंसिया (स्पेन) की अदालतों के अधीन हैं, लागू अनिवार्य क्षेत्राधिकार को छोड़कर।<br><br><strong>संपर्क:</strong><br>vitalspath@gmail.com"
-         }
-       }
-     }
-   },
-   "feedback": {
-     "title": "प्रतिक्रिया भेजें",
-     "subtitle": "अपने विचार साझा करके VitalsPath को बेहतर बनाने में मदद करें",
-     "types": {
-       "feature": "सुविधा अनुरोध",
-       "bug": "बग रिपोर्ट",
-       "improvement": "सुधार",
-       "question": "प्रश्न",
-       "other": "अन्य"
-     },
-     "form": {
-       "type": "प्रतिक्रिया प्रकार",
-       "name": "आपका नाम",
-       "email": "ईमेल पता",
-       "subject": "विषय",
-       "message": "संदेश",
-       "namePlaceholder": "अपना नाम दर्ज करें",
-       "emailPlaceholder": "your@email.com",
-       "subjectPlaceholder": "संक्षिप्त विवरण",
-       "messagePlaceholder": "अपनी प्रतिक्रिया के बारे में और बताएं...",
-       "submit": "प्रतिक्रिया भेजें"
-     },
-     "success": {
-       "title": "धन्यवाद!",
-       "message": "आपकी प्रतिक्रिया प्राप्त हो गई है। हम आपके योगदान की सराहना करते हैं और इसकी सावधानीपूर्वक समीक्षा करेंगे।",
-       "backHome": "होम पर वापस"
-     }
-   }
- }
+        "recipients": {},
+        "contact": {
+          "title": "संपर्क",
+          "content": "इस अस्वीकरण के बारे में प्रश्नों के लिए, support@vitalspath.app पर हमसे संपर्क करें।"
+        }
+      }
+    },
+    "subscription": {
+      "title": "VitalsPath सदस्यता शर्तें",
+      "lastUpdated": "अंतिम अपडेट: 18 फरवरी 2026",
+      "intro": "VitalsPath मुफ्त और प्रीमियम सुविधाओं के साथ एक फ्रीमियम मॉडल प्रदान करता है। यह पेज समझाता है कि सदस्यता, भुगतान और रद्दीकरण कैसे काम करते हैं।",
+      "sections": {
+        "whatIs": {
+          "title": "1. VitalsPath Premium क्या है?",
+          "content": "VitalsPath Premium एक भुगतान योजना है जो पारिवारिक स्वास्थ्य प्रबंधन के लिए उन्नत सुविधाएं अनलॉक करती है।<br><br><strong>शामिल सुविधाएं:</strong><br>• असीमित पारिवारिक प्रोफाइल<br>• पसंदीदा क्लिनिक और फार्मेसी<br>• उन्नत दवा शेड्यूलिंग<br>• दवा इन्वेंट्री ट्रैकिंग<br>• पूर्ण डेटा निर्यात (PDF/CSV)<br>• उन्नत विश्लेषण और आंकड़े<br>• iCloud बैकअप (एंड-टू-एंड एन्क्रिप्शन)<br>• प्राथमिकता ईमेल समर्थन<br><br><strong>मुफ्त संस्करण:</strong><br>मुफ्त संस्करण में 2 तक प्रोफाइल, बुनियादी दवाएं, स्थानीय रिमाइंडर और सीमित निर्यात शामिल हैं।"
+        },
+        "plans": {
+          "title": "2. उपलब्ध सदस्यता योजनाएं",
+          "content": "<strong>मासिक:</strong> माह-दर-माह भुगतान, कभी भी रद्द कर सकते हैं।<br><br><strong>वार्षिक:</strong> मासिक योजना की तुलना में छूट के साथ वार्षिक भुगतान। हर 12 महीने में स्वचालित नवीनीकरण।<br><br><strong>लाइफटाइम:</strong> एकमुश्त भुगतान। वर्तमान और भविष्य की सभी प्रीमियम सुविधाओं तक स्थायी पहुंच, कोई आवर्ती भुगतान नहीं।<br><br>कीमतें देश के अनुसार भिन्न हो सकती हैं और स्थानीय कर शामिल हो सकते हैं। पुष्टि से पहले कीमतें खरीद स्क्रीन पर दिखाई देती हैं।"
+        },
+        "howItWorks": {
+          "title": "3. खरीद कैसे काम करती है",
+          "content": "<strong>Apple के माध्यम से प्रबंधन:</strong><br>सभी खरीद और सदस्यताएं आपके Apple खाते (App Store) के माध्यम से प्रबंधित होती हैं।<br><br><strong>स्वचालित नवीनीकरण:</strong><br>मासिक और वार्षिक सदस्यताएं अवधि के अंत में स्वचालित रूप से नवीनीकृत होती हैं, जब तक आप पहले रद्द न करें।<br><br><strong>पुष्टि:</strong><br>खरीद की पुष्टि करने पर, भुगतान आपके iTunes/Apple ID खाते से काटा जाएगा।<br><br><strong>मुफ्त परीक्षण:</strong><br>यदि हम मुफ्त परीक्षण अवधि प्रदान करते हैं, तो यह स्वचालित रूप से भुगतान सदस्यता में बदल जाएगी जब तक आप समाप्ति से पहले रद्द न करें।"
+        },
+        "management": {
+          "title": "4. अपनी सदस्यता का प्रबंधन",
+          "content": "आप अपने iOS डिवाइस से सदस्यता प्रबंधित कर सकते हैं:<br><br>1. <strong>Settings</strong> ऐप खोलें<br>2. ऊपर अपने <strong>नाम/Apple ID</strong> पर टैप करें<br>3. <strong>Subscriptions</strong> चुनें<br>4. <strong>VitalsPath</strong> खोजें और चुनें<br>5. यहां से आप योजना बदल सकते हैं या रद्द कर सकते हैं<br><br>आप अपनी प्रोफाइल फोटो टैप करके App Store से भी सदस्यताएं प्रबंधित कर सकते हैं → Subscriptions।"
+        },
+        "cancellation": {
+          "title": "5. रद्द करने पर क्या होता है?",
+          "content": "<strong>अवधि के अंत तक पहुंच:</strong><br>यदि आप मासिक या वार्षिक सदस्यता रद्द करते हैं, तो वर्तमान बिलिंग अवधि के समाप्त होने तक आप प्रीमियम सुविधाओं तक पहुंच जारी रखेंगे।<br><br><strong>कोई आंशिक रिफंड नहीं:</strong><br>सक्रिय सदस्यताओं की अनुपयुक्त अवधियों के लिए रिफंड की पेशकश नहीं की जाती।<br><br><strong>डेटा संरक्षित:</strong><br>आपका डेटा संरक्षित रहता है। यदि आप पुनः सदस्यता लेते हैं, तो आप सभी सेटिंग्स और इतिहास तक पहुंच पुनः प्राप्त करेंगे।<br><br><strong>लाइफटाइम योजना:</strong><br>लाइफटाइम योजना में कोई आवर्ती सदस्यता नहीं है, इसलिए रद्द करने के लिए कुछ भी नहीं है। आपको स्थायी पहुंच मिलेगी।"
+        },
+        "issues": {
+          "title": "6. तकनीकी समस्याएं और समर्थन",
+          "content": "<strong>खरीदें पुनर्स्थापित करें:</strong><br>यदि आपने Premium खरीदा है लेकिन यह सक्रिय नहीं हुआ, तो Settings → Premium → Restore Purchases पर जाएं।<br><br><strong>डिवाइस बदलना:</strong><br>आपकी खरीद आपके Apple ID से जुड़ी है। अपने नए डिवाइस पर VitalsPath इंस्टॉल करें और खरीदें पुनर्स्थापित करें।<br><br><strong>समर्थन से संपर्क करें:</strong><br>भुगतान या सदस्यता समस्याओं के लिए, ईमेल करें: vitalspath@gmail.com<br><br><strong>रिफंड:</strong><br>Apple सभी रिफंड संभालता है। आप reportaproblem.apple.com से अनुरोध कर सकते हैं"
+        },
+        "changes": {
+          "title": "7. Premium में बदलाव",
+          "content": "<strong>नई सुविधाएं:</strong><br>हम मौजूदा ग्राहकों के लिए बिना किसी अतिरिक्त लागत के नई प्रीमियम सुविधाएं जोड़ सकते हैं।<br><br><strong>कीमत बदलाव:</strong><br>यदि हम सक्रिय सदस्यता की कीमत बढ़ाते हैं, तो हम पहले से सूचित करेंगे। आप नई कीमत स्वीकार कर सकते हैं या रद्द कर सकते हैं।<br><br><strong>सुविधा हटाना:</strong><br>हम शायद ही कभी सुविधाएं हटाते हैं। यदि हम करते हैं, तो हम समकक्ष विकल्प खोजेंगे।<br><br><strong>लाइफटाइम योजना:</strong><br>लाइफटाइम एक्सेस में बिना किसी अतिरिक्त लागत के सभी भविष्य के अपडेट शामिल हैं।"
+        },
+        "law": {
+          "title": "8. लागू कानून",
+          "content": "ये शर्तें स्पेनिश कानून द्वारा शासित हैं।<br><br>किसी भी विवाद के लिए, पक्ष वालेंसिया (स्पेन) की अदालतों के अधीन हैं, लागू अनिवार्य क्षेत्राधिकार को छोड़कर।<br><br><strong>संपर्क:</strong><br>vitalspath@gmail.com"
+        }
+      }
+    }
+  },
+  "feedback": {
+    "title": "प्रतिक्रिया भेजें",
+    "subtitle": "अपने विचार साझा करके VitalsPath को बेहतर बनाने में मदद करें",
+    "types": {
+      "feature": "सुविधा अनुरोध",
+      "bug": "बग रिपोर्ट",
+      "improvement": "सुधार",
+      "question": "प्रश्न",
+      "other": "अन्य"
+    },
+    "form": {
+      "type": "प्रतिक्रिया प्रकार",
+      "name": "आपका नाम",
+      "email": "ईमेल पता",
+      "subject": "विषय",
+      "message": "संदेश",
+      "namePlaceholder": "अपना नाम दर्ज करें",
+      "emailPlaceholder": "your@email.com",
+      "subjectPlaceholder": "संक्षिप्त विवरण",
+      "messagePlaceholder": "अपनी प्रतिक्रिया के बारे में और बताएं...",
+      "submit": "प्रतिक्रिया भेजें"
+    },
+    "success": {
+      "title": "धन्यवाद!",
+      "message": "आपकी प्रतिक्रिया प्राप्त हो गई है। हम आपके योगदान की सराहना करते हैं और इसकी सावधानीपूर्वक समीक्षा करेंगे।",
+      "backHome": "होम पर वापस"
+    }
+  }
+}
