--- a/src/i18n/locales/it.json
+++ b/src/i18n/locales/it.json
@@ -245,6 +245,7 @@
     "privacy": "Privacy",
     "support": "Supporto",
     "copyright": "2026 VitalsPath · Fatto con",
+    "developer": "da RomeroDev",
     "feedback": "Invia Feedback",
     "terms": "Termini e Condizioni",
     "disclaimer": "Disclaimer",
