--- a/src/i18n/locales/nl.json
+++ b/src/i18n/locales/nl.json
@@ -245,6 +245,7 @@
     "privacy": "Privacy",
     "support": "Ondersteuning",
     "copyright": "2026 VitalsPath · Gemaakt met",
+    "developer": "door RomeroDev",
     "feedback": "Feedback versturen",
     "terms": "Algemene Voorwaarden",
     "disclaimer": "Disclaimer",
