--- a/src/i18n/locales/pl.json
+++ b/src/i18n/locales/pl.json
@@ -245,6 +245,7 @@
     "privacy": "Prywatność",
     "support": "Wsparcie",
     "copyright": "2026 VitalsPath · Stworzone z",
+    "developer": "przez RomeroDev",
     "feedback": "Wyślij opinię",
     "terms": "Regulamin",
     "disclaimer": "Zastrzeżenie",
