--- a/src/i18n/locales/pt.json
+++ b/src/i18n/locales/pt.json
@@ -248,6 +248,7 @@
     "terms": "Termos e Condições",
     "disclaimer": "Aviso Legal",
     "copyright": "2026 VitalsPath · Feito com",
+    "developer": "por RomeroDev",
     "subscription": "Assinatura"
   },
   "legal": {
