--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -108,19 +108,31 @@
       "badge": "Лекарства",
       "title": "Архитектура доз",
       "description": "Каждая доза - независимая сущность.",
-      "features": ["Статус дозы", "История изменений", "Расширение лечения"]
+      "features": [
+        "Статус дозы",
+        "История изменений",
+        "Расширение лечения"
+      ]
     },
     "calendar": {
       "badge": "Календарь",
       "title": "Один календарь",
       "description": "Месячный вид для доз, лечений, appointments.",
-      "features": ["Appointments с повторением", "Связанные задачи", "Шаблоны"]
+      "features": [
+        "Appointments с повторением",
+        "Связанные задачи",
+        "Шаблоны"
+      ]
     },
     "symptoms": {
       "badge": "Симптомы",
       "title": "Аудит здоровья",
       "description": "Запись симптомов с severity.",
-      "features": ["100 симптомов", "Этапы: начальный, хронический", "Графики"]
+      "features": [
+        "100 симптомов",
+        "Этапы: начальный, хронический",
+        "Графики"
+      ]
     }
   },
   "benefits": {
@@ -233,6 +245,7 @@
     "privacy": "Конфиденциальность",
     "support": "Поддержка",
     "copyright": "2026 VitalsPath - Сделано с",
+    "developer": "от RomeroDev",
     "feedback": "Обратная связь",
     "terms": "Условия",
     "disclaimer": "Отказ",
