--- a/src/i18n/locales/tr.json
+++ b/src/i18n/locales/tr.json
@@ -248,6 +248,7 @@
     "terms": "Kullanım Koşulları",
     "disclaimer": "Sorumluluk Reddi",
     "copyright": "2026 VitalsPath · İle yapıldı",
+    "developer": "RomeroDev tarafından",
     "subscription": "Abonelik"
   },
   "legal": {
