--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -245,6 +245,7 @@
     "privacy": "プライバシー",
     "support": "サポート",
     "copyright": "2026 VitalsPath · 制作",
+    "developer": "RomeroDev による",
     "feedback": "フィードバックを送信",
     "terms": "利用規約",
     "disclaimer": "免責事項",
