--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -245,6 +245,7 @@
     "privacy": "隐私",
     "support": "支持",
     "copyright": "2026 VitalsPath · 用心制作",
+    "developer": "由 RomeroDev 开发",
     "feedback": "发送反馈",
     "terms": "条款和条件",
     "disclaimer": "免责声明",
